horizontal scroll fix

--- a/src/scss/projects-viewer.scss
+++ b/src/scss/projects-viewer.scss
@@ -1,7 +1,7 @@
 .projects-viewer {
   overflow: hidden;
 
-  @media (min-width: 768px) {
+  @media (min-width: 1154px) {
     padding: 0 30px;
     margin: 0 -30px;
   }
